#4 - change api to snake case, fix openapi error spec, add validation
