# api/openapi-spec/openapi.yaml
@@ -62,13 +62,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
         '401':
-          description: Authorization required
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '403':
-          description: You do not have permission to replay transactions
+          description: Authorization via API Token required
           content:
             application/json:
               schema:
@@ -80,7 +74,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
         '502':
-          description: The Concardis backend could not be reached.
+          description: The Concardis backend could not be reached or returned an unexpected error.
           content:
             application/json:
               schema:
@@ -124,12 +118,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-        '403':
-          description: You do not have permission to see this payment link
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '404':
           description: Payment link not found
           content:
@@ -143,7 +131,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
         '502':
-          description: The Concardis backend could not be reached.
+          description: The Concardis backend could not be reached or returned an unexpected error.
           content:
             application/json:
               schema:
@@ -365,17 +353,17 @@ components:
     PaymentLinkRequest:
       type: object
       required:
-        - debitorId
-        - amountDue
+        - debitor_id
+        - amount_due
         - currency
-        - vatRate
+        - vat_rate
       properties:
-        debitorId:
+        debitor_id:
           type: integer
           format: int64
           minimum: 1
           description: The badge number of the attendee. Will be used to build appropriate description, referenceId, etc.
-        amountDue:
+        amount_due:
           type: integer
           format: int64
           minimum: 1
@@ -387,7 +375,7 @@ components:
           maxLength: 3
           description: The currency to use.
           example: EUR
-        vatRate:
+        vat_rate:
           type: number
           format: float
           description: The applicable VAT, in percent.
@@ -396,10 +384,10 @@ components:
       type: object
       required:
         - purpose
-        - referenceId
-        - amountDue
+        - reference_id
+        - amount_due
         - currency
-        - vatRate
+        - vat_rate
       properties:
         title:
           type: string
@@ -413,7 +401,7 @@ components:
           maxLength: 255
           description: The description to be shown on the payment page.
           example: Payment for Eurofurence 27 membership.
-        referenceId:
+        reference_id:
           type: string
           minLength: 1
           maxLength: 80
@@ -425,13 +413,13 @@ components:
           maxLength: 255
           description: The purpose of this payment process.
           example: Payment of Eurofurence 27 registration fee for CrystalFox.
-        amountDue:
+        amount_due:
           type: integer
           format: int64
           minimum: 1
           description: The amount to bill for. TODO - is this Cents or Euros?
           example: 95
-        amountPaid:
+        amount_paid:
           type: integer
           format: int64
           minimum: 0
@@ -443,7 +431,7 @@ components:
           maxLength: 3
           description: The currency to use.
           example: EUR
-        vatRate:
+        vat_rate:
           type: number
           format: float
           description: The applicable VAT, in percent.
@@ -529,10 +517,15 @@ components:
             - unexpected (an unexpected error)
           example: paylink.data.invalid
         details:
-          type: array
-          items:
-            type: string
-          description: Optional list of additional details about the error. If available, will usually contain English language technobabble.
+          type: object
+          additionalProperties:
+            type: array
+            items:
+              type: string
+          description: Optional additional details about the error. If available, will usually contain English language technobabble.
+          example:
+            some_key: ["some English language technobabble that may or may not help you"]
+            currency: ["configuration only allows CHF,EUR"]
   securitySchemes:
     ApiKeyAuth:
       type: apiKey
